[gd_scene load_steps=4 format=3 uid="uid://bts0qgn0b6vjo"]

[ext_resource type="Texture2D" uid="uid://b2x6in7fjs12i" path="res://assets/kenny_top-down-tanks-redux/Spritesheet/onlyObjects_default.png" id="1_jo335"]
[ext_resource type="Script" path="res://bullet.gd" id="1_yoj7q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krj7i"]
size = Vector2(4, 10)

[node name="Bullet" type="Area2D"]
rotation = 1.5708
script = ExtResource("1_yoj7q")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_krj7i")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_jo335")
region_enabled = true
region_rect = Rect2(198, 46, 4, 10)

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
